# PeregrineQueue

./: .env.example  .envrc  .envrc.example  .gitignore  Dockerfile  Dockerfile.Monster  Dockerfile.dev  Dockerfile.phoenix  Dockerfile.rust  Dockerfile.worker  README.md  docker-compose.coolify.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  mix.exs
.github/workflows/: fly-deploy.yml
assets/: package-lock.json  package.json  tailwind.config.js
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
example_workers/fast_response_rust_worker/: Cargo.toml  build.rs
example_workers/fast_response_rust_worker/src/: main.rs
example_workers/long_running_rust_worker/src/: main.rs
example_workers/pull_style_rust_worker/: Cargo.toml
example_workers/pull_style_rust_worker/src/: main.rs
lib/: peregrine_queue.ex  peregrine_queue_web.ex
lib/peregrine_queue/: application.ex  date_time_formater.ex  dynamic_queue.ex  enqueue_service.ex  job_data.ex  job_data_service.ex  mailer.ex  queue_server.ex  queue_service.ex  rate_limiter.ex  release.ex  repo.ex  startup_task.ex  worker_client.ex  worker_registry.ex
lib/peregrine_queue/workers/: demo_cleanup_worker.ex  generic_worker.ex
lib/peregrine_queue_web/: endpoint.ex  gettext.ex  grpc_endpoint.ex  router.ex  telemetry.ex  utils.ex
priv/protos/: queue_service.proto
priv/repo/: seeds.exs
rust_worker/: build.rs
rust_worker/src/: main.rs
test/: test_helper.exs
test/support/: conn_case.ex  data_case.ex
(+30 files in other folders)
