[package]
name = "fast_response_rust_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.9"