[package]
name = "fast_response_rust_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
regex = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tonic-reflection = "0.10"
rand = "0.8"
[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }